# NoIRFacetracking

./: .gitignore  CMakeLists.txt  README.md  settings.yaml
apps/: capture_cam.cpp
include/: opencv_install.sh
